# planes-of-booty

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
assets/scripts/: game_init.rune
assets/shaders/: water.frag  water.vert
codegen/: build.rs  def.rs
resources/arenas/: arena_1.yaml  arena_10.yaml  arena_2.yaml  arena_3.yaml  arena_4.yaml  arena_5.yaml  arena_6.yaml  arena_7.yaml  arena_8.yaml  arena_9.yaml
resources/entities/: crab_jr.yaml  crabster.yaml  croc.yaml  lootbox.yaml  mimic.yaml  pirate_raft.yaml  pirate_ship_blue.yaml  pirate_ship_ghost.yaml  pirate_ship_green.yaml  pirate_ship_red.yaml  player.ron  player.yaml  reef_1.yaml  reef_2.yaml  reef_3.yaml  reef_4.yaml  swirl.yaml  whale.yaml  wreck_1.yaml  wreck_2.yaml
resources/items/: coconut.yaml  crab_revolver.yaml  crab_shotgun.yaml  crossbow.yaml  eight_barrel.yaml  enlarged_barrel.yaml  kannon_king.yaml  mimic_duals.yaml  orange.yaml  pirate_ram.yaml  pirate_slingshot.yaml  pirate_slingshot_v2.yaml  pirate_tnt.yaml  pitaya.yaml  ram.yaml  seaweed.yaml  slingshot.yaml  starfruit.yaml  surprise.yaml  trident.yaml  wave_spawner.yaml
resources/particles/: electro.yaml  explosion.yaml  foam.yaml  medium_splash.yaml  splash.yaml
resources/shaders/: outline.frag  silhouette.frag
resources/spawn_groups/: bombs.yaml  crabs.yaml  ghosts.yaml  melee.yaml  priates.yaml  shotguneers.yaml
resources/sprites/: water
src/: arena.rs  assets.rs  attack.rs  config.rs  entity.rs  game.rs  item.rs  main.rs  main_menu.rs  math.rs  particle.rs  scene.rs  shader.rs
(+39 files in other folders)
