[package]
name = "planes-of-booty"
version = "0.2.0"
authors = ["barsoosayque <shtoshich@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.4.0"
bevy_fallible = { version = "0.4.0" }

nphysics2d = "0.15.1"

anyhow = "1.0.31"
rand = "0.7.3"
enum-map = "0.6.2"
itertools = "0.9.0"
bevy_megaui = "0.1.3"
