[package]
name = "planes-of-booty"
version = "0.2.0"
authors = ["barsoosayque <shtoshich@gmail.com>"]
edition = "2018"

[features]
default = ["develop"]
develop = []

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.4.0"
bevy_fallible = { version = "0.4.0" }
bevy_egui = { version = "0.1.1", default-features = false }

rune = "0.9.0"
runestick = "0.9.0"

anyhow = "1.0.31"
rand = "0.7.3"
enum-map = "0.6.2"
itertools = "0.9.0"
pico-args = "0.4.0"
typed-builder = "0.8.0"
lazy-static-include = "3.0.5"
lazy_static = "1.4.0"
termcolor = "1.1.2"
